Final Push - Pre Manual

--- a/UWP_FullTrust_1/HateSpeechDetector/Strings/en-us/Resources.resw
+++ b/UWP_FullTrust_1/HateSpeechDetector/Strings/en-us/Resources.resw
@@ -118,23 +118,23 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AppDisplayName" xml:space="preserve">
-    <value>HateSpeechDetector</value>
+    <value>Hate Speech Detector</value>
     <comment>Application display name</comment>
   </data>
   <data name="AppDescription" xml:space="preserve">
-    <value>HateSpeechDetector</value>
+    <value>Hate Speech Detector</value>
     <comment>Application description</comment>
   </data>
   <data name="Shell_LiveSearch.Content" xml:space="preserve">
-    <value>LiveSearch</value>
+    <value>Live Search</value>
     <comment>Navigation view item name for LiveSearch</comment>
   </data>
   <data name="Shell_UserSearch.Content" xml:space="preserve">
-    <value>UserSearch</value>
+    <value>User Search</value>
     <comment>Navigation view item name for UserSearch</comment>
   </data>
   <data name="Shell_ManualSearch.Content" xml:space="preserve">
-    <value>ManualSearch</value>
+    <value>Manual Search</value>
     <comment>Navigation view item name for ManualSearch</comment>
   </data>
   <data name="Shell_SchemeActivationSample.Content" xml:space="preserve">
@@ -160,7 +160,7 @@ Suspendisse dui purus, scelerisque at, vulputate vitae, pretium mattis, nunc. Ma
     <comment>First use prompt message body</comment>
   </data>
   <data name="FirstRunDialog.Title" xml:space="preserve">
-    <value>Welcome</value>
+    <value>Welcome, This is twitter hate speech Detector. You can do two types of searches on twitter, Live and User Based.</value>
     <comment>First use prompt message title</comment>
   </data>
   <data name="FirstRunDialog.PrimaryButtonText" xml:space="preserve">
@@ -170,5 +170,49 @@ Suspendisse dui purus, scelerisque at, vulputate vitae, pretium mattis, nunc. Ma
   <data name="ExceptionSettingsStorageExtensionsFileNameIsNullOrEmpty" xml:space="preserve">
     <value>File name is null or empty. Specify a valid file name</value>
     <comment>File name is null or empty to save file in settings storage extensions</comment>
+  </data>
+  <data name="Settings_Theme.Text" xml:space="preserve">
+    <value>Choose Theme</value>
+    <comment>Choose theme text for Settings</comment>
+  </data>
+  <data name="Settings_Theme_Dark.Content" xml:space="preserve">
+    <value>Dark</value>
+    <comment>Dark theme text for Settings</comment>
+  </data>
+  <data name="Settings_Theme_Default.Content" xml:space="preserve">
+    <value>Windows default</value>
+    <comment>Windows default theme text for Settings</comment>
+  </data>
+  <data name="Settings_Theme_Light.Content" xml:space="preserve">
+    <value>Light</value>
+    <comment>Light theme text for Settings</comment>
+  </data>
+  <data name="Settings_About.Text" xml:space="preserve">
+    <value>PlaceHold</value>
+    <comment>About this application title for Settings</comment>
+  </data>
+  <data name="Settings_AboutDescription.Text" xml:space="preserve">
+    <value>This Application is a GUI component of Hate speech detection Model built using LSTM Neural Network.</value>
+    <comment>About this application description for Settings</comment>
+  </data>
+  <data name="Settings_PrivacyTermsLink.Content" xml:space="preserve">
+    <value>All Rights Reserved @ CS-F19-11</value>
+    <comment>Privacy Statement link content for Settings</comment>
+  </data>
+  <data name="Settings_PrivacyTermsLink.NavigateUri" xml:space="preserve">
+    <value>https://www.CS-F19-11.com</value>
+    <comment>Here is your Privacy Statement url for Settings</comment>
+  </data>
+  <data name="Settings_Personalization.Text" xml:space="preserve">
+    <value>Personalization</value>
+    <comment>Personalization text for Settings</comment>
+  </data>
+  <data name="ExceptionEnumToBooleanConverterValueMustBeAnEnum" xml:space="preserve">
+    <value>value must be an Enum!</value>
+    <comment>Value must be an Enum in enum to boolean converter</comment>
+  </data>
+  <data name="ExceptionEnumToBooleanConverterParameterMustBeAnEnumName" xml:space="preserve">
+    <value>parameter must be an Enum name!</value>
+    <comment>Parameter must be an Enum name in enum to boolean converter</comment>
   </data>
 </root>
